kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
    nodePort: 30000
  selector:
    app: n8n
