kubernetes/n8n-ozona-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: n8n-ozona.nistall.es  # Asegúrate de que este host coincida con tu subdominio configurado en Cloudflare
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
  tls:
  - hosts:
    - n8n-ozona.nistall.es  # Debe coincidir con el host definido arriba
    secretName: n8n-ozona-tls  # Cambia esto al nombre que prefieras
